# MIDIUIUgenVS

./: CMakeLists.txt  MIDIUIUgen.cpp  MidiDevice.h  utils.cpp  utils.h
FinalNeededFiles/: MIDIUIUgen.sc  MIDIUIUgen.scx  Read Me.txt
MIDI/: COPYRIGHT  MIDI.dsp  MIDI.dsw  MIDI.sln  MIDI.vcxproj  Midi.cpp  Midi.h  MidiDevice.cpp  README.txt  UpgradeLog.htm
MIDI/Debug/: MIDI.lib
MIDI/Test/: Test.dsp  Test.vcxproj  test.cpp
MIDITest2/: MIDITest2.aps  MIDITest2.vcproj  MIDITest2.vcxproj  MIDITest2.vcxproj.filters  main.cpp  resource.h
Project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MIDI.lib  MIDIUIUgen.sln  MIDIUIUgen.vcxproj  MIDIUIUgen.vcxproj.filters  UpgradeLog2.htm  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pthreadVC.lib
Project/Debug/: MIDITest2.exp  MIDITest2.lib
Project/Win32/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
SuperCollider-Source/external_libraries/pthread-win32/: BuildLog.htm  mt.dep  pthread.sln  pthread.vcproj  pthreadVC.exp  pthreadVC.map  version.res
